# ImageFiltering

./: .gitignore  README.md  dependecies_debian.sh
MAIN/ImageFiltering/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
MAIN/build-ImageFiltering-Desktop-Debug/: CMakeCache.txt  ImageFiltering  ImageFiltering.cbp  Makefile  cmake_install.cmake
MAIN/build-ImageFiltering-Desktop-Debug/ImageFiltering_autogen/: moc_predefs.h
MAIN/build-ImageFiltering-Desktop-Debug/ImageFiltering_autogen/EWIEGA46WW/: moc_mainwindow.cpp
SO_ASM/: asembly.sh  lib.asm
SO_C/: CMakeLists.txt  library.cpp  library.h
